# themis

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PRODUCT.md  README.md  docker-compose.dev.yml  docker-compose.yml  openapi.json
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  models.py
backend/app/api/: websocket.py
backend/app/migrations/: migrate.py  runner.py  v001_initial.py  v002_project_order_link.py  v003_webhook_config.py  v004_gcode_estimates.py  v005_project_order_merge.py  v006_project_links.py  v007_printer_bed_size.py  v008_job_estimates_and_queue_config.py  v009_drop_filament_profile_uuid.py
backend/app/services/: abstract_printer_client.py  bambu_mqtt.py  camera_proxy.py  catalog_utils.py  elegoo_centauri_client.py  laminus_sidecar_client.py  library_scanner.py  mesh_3mf_builder.py  mock_printer_client.py  orca_sidecar_client.py  override_inspector.py  paint_remap.py  preset_resolver.py  printer_client_factory.py  printer_manager.py  profile_index.py  profile_service.py  project_config_builder.py  project_pack_builder.py  queue_engine.py  slicer_service.py  snapmaker_client.py  spoolman_service.py  (+3 more)
backend/scripts/: reextract_thumbnails.py  spike_filament_map.py  spike_filament_remap.py  verify_tool_index_e2e.py
backend/tests/: conftest.py  spoolman_mock.py  test_autoconnect.py  test_embedded_settings.py  test_filament_map_migration.py  test_fleet.py  test_health.py  test_job_overrides.py  test_main_lifespan.py  test_migrations.py  test_models.py  test_printer_factory.py  test_printers.py
(+257 files in other folders)
